@@ -1,4 +1,15 @@
+ENet 1.3.15 (April 20, 2020):
+
+* quicker RTT initialization
+* use fractional precision for RTT calculations
+* fixes for packet throttle with low RTT variance
+* miscellaneous socket bug fixes
+
+ENet 1.3.14 (January 27, 2019):
+
+* bug fix for enet_peer_disconnect_later()
 * use getaddrinfo and getnameinfo where available
+* miscellenous cleanups
 
 ENet 1.3.13 (April 30, 2015):
 
